--- a/Insta/WebContent/index2.html
+++ b/Insta/WebContent/index2.html
@@ -12,8 +12,17 @@
 <style>
 #wrapper{
 	margin-top:50px;
-	margin:auto;
-	width:600px;
+	margin-left:auto;
+	margin-right:auto;
+	width:800px;
+}
+#loginform{
+	margin-top:auto;
+	margin-bottom:auto;
+	height:400px;
+}
+#loginlink{
+	margin-top:20px;
 }
 .form_group{
 	margin:center;
@@ -35,12 +44,15 @@ a:hover, a:active {
 <body>
 <div class="container-fluid" >
   <div class="row content" id="wrapper" >
-    <div class="col-sm-3 sidenav">
-      <img class="img-responsive" src="/images/img1.jpg" alt="Chania" width="400px">
+    <div class="col-sm-6 sidenav">
+      <img class="img-responsive" src="/images/img1.jpg" alt="Chania" >
     </div>
-    <div class="col-sm-8" id="">
+    <div class="col-sm-6">
       <form class="form-horizontal">
-        <div class="well well-lg">
+        <div class="well well-lg" id="loginform">
+         <div class="jumbotron text-center">
+		   <h2>Instagram</h2>
+		 </div>
 	    <div class="form-group">
 	      <div class="col-sm-10">
 	        <input type="email" class="form-control" id="email" placeholder="이메일">
@@ -63,12 +75,12 @@ a:hover, a:active {
 	    </div>
 	    <div class="form-group">
 	      <div class="col-sm-offset-3 col-sm-6">
-	        <button type="submit" class="btn btn-default">가입</button>
+	        <button type="submit" class="btn btn-default"><a href="/index.html">가입</a></button>
 	      </div>
 	    </div>
 	    </div>
 	  </form>
-	  <div class="col-sm-offset-2 col-sm-6">
+	  <div class="col-sm-offset-2 col-sm-6" id="loginlink">
 		  <div class="well well-sm">회원 이시라면  <a href="default.asp" target="_blank">Log In</a></div>
 	  </div>
     </div>
