--- a/Insta/WebContent/index.html
+++ b/Insta/WebContent/index.html
@@ -21,7 +21,7 @@
 	margin-bottom:auto;
 	height:400px;
 }
-#loginlink{
+#link_regist{
 	margin-top:20px;
 }
 .form_group{
@@ -45,8 +45,9 @@ a:hover, a:active {
 <div class="container-fluid" >
   <div class="row content" id="wrapper" >
     <div class="col-sm-6 sidenav">
-      <img class="img-responsive" src="/images/img1.jpg" alt="Chania" >
+      <img class="img-responsive" src="/images/phone1.jpg" alt="Chania" >
     </div>
+    <div>
     <div class="col-sm-6">
       <form class="form-horizontal">
         <div class="well well-lg" id="loginform">
@@ -54,23 +55,28 @@ a:hover, a:active {
 		   <h2>Instagram</h2>
 		 </div>
 	    <div class="form-group">
-	      <div class="col-sm-10">
+	      <div class="col-sm-12">
 	        <input type="email" class="form-control" id="nickname" placeholder="사용자 이름">
 	      </div>
 	    </div>
 	    <div class="form-group">
-	      <div class="col-sm-10">
+	      <div class="col-sm-12">
 	        <input type="password" class="form-control" id="pwd" placeholder="비밀번호">
 	      </div>
 	    </div>
 	    <div class="form-group">
-	      <div class="col-sm-offset-3 col-sm-6">
-	        <button type="submit" class="btn btn-default" onClick="login()">로그인</button>
+	      <div class="col-sm-12">
+	        <button type="button" class="btn btn-primary btn-block">로그인</button>
 	      </div>
 	    </div>
 	    </div>
 	  </form>
+	  	 
+		  <div class="well well-sm" id="link_regist">계정이 없으신가요??  <a href="/regist.html">가입하기</a></div>
     </div>
+    
+    </div>
+   
   </div>
 </div>
 </body>
