--- a/Insta/WebContent/regist.html
+++ b/Insta/WebContent/regist.html
@@ -19,9 +19,9 @@
 #loginform{
 	margin-top:auto;
 	margin-bottom:auto;
-	height:400px;
+	height:460px;
 }
-#loginlink{
+#link_login{
 	margin-top:20px;
 }
 .form_group{
@@ -45,44 +45,46 @@ a:hover, a:active {
 <div class="container-fluid" >
   <div class="row content" id="wrapper" >
     <div class="col-sm-6 sidenav">
-      <img class="img-responsive" src="/images/img1.jpg" alt="Chania" >
+      <img class="img-responsive" src="/images/phone1.jpg" alt="Chania" >
     </div>
     <div class="col-sm-6">
+    <div >
       <form class="form-horizontal">
         <div class="well well-lg" id="loginform">
          <div class="jumbotron text-center">
 		   <h2>Instagram</h2>
 		 </div>
 	    <div class="form-group">
-	      <div class="col-sm-10">
+	      <div class="col-sm-12">
 	        <input type="email" class="form-control" id="email" placeholder="이메일">
 	      </div>
 	    </div>
 	    <div class="form-group">
-	      <div class="col-sm-10">
+	      <div class="col-sm-12">
 	        <input type="password" class="form-control" id="name" placeholder="성명">
 	      </div>
 	    </div>
 	    <div class="form-group">
-	      <div class="col-sm-10">
+	      <div class="col-sm-12">
 	        <input type="email" class="form-control" id="nickname" placeholder="사용자 이름">
 	      </div>
 	    </div>
 	    <div class="form-group">
-	      <div class="col-sm-10">
+	      <div class="col-sm-12">
 	        <input type="password" class="form-control" id="pwd" placeholder="비밀번호">
 	      </div>
 	    </div>
 	    <div class="form-group">
-	      <div class="col-sm-offset-3 col-sm-6">
-	        <button type="submit" class="btn btn-default"><a href="/index.html">가입</a></button>
+	      <div class="col-sm-12">
+	      	<button type="button" class="btn btn-primary btn-block"><a href="/index.html">가입</a></button>
 	      </div>
 	    </div>
 	    </div>
 	  </form>
-	  <div class="col-sm-offset-2 col-sm-6" id="loginlink">
-		  <div class="well well-sm">회원 이시라면  <a href="default.asp" target="_blank">Log In</a></div>
+	  	<div class="well well-sm" id="link_login">계정이 없으신가요??  <a href="/index.html">가입하기</a></div>
 	  </div>
+		 
+	 
     </div>
   </div>
 </div>
